finamer/qa/plataforma/pgadmin/yaml/pgadmin-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
   name: pgadmin
   namespace: pgadmin
spec:
  serviceName: pgadmin-service
  podManagementPolicy: Parallel
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:8.8
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: pgadmin-config
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
              readOnly: true
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-config
          configMap:
            name: pgadmin-config
  volumeClaimTemplates:
    - metadata:
        name: pgadmin-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 3Gi
---
apiVersion: v1
kind: Service
metadata:
   name: pgadmin-service
   namespace: pgadmin
spec:
   ports:
   -   protocol: TCP
       port: 80
       targetPort: http
   selector:
      app: pgadmin
   type: NodePort
---
apiVersion: v1
kind: Service
metadata:
   name: pgadmin-service-ext
   namespace: pgadmin
spec:
   ports:
   -   protocol: TCP
       port: 80
       targetPort: http
   selector:
      app: pgadmin
   type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: pgadmin
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: "pgadminqa.tailorw.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pgadmin-service-ext
            port:
              number: 80
  tls:
  - hosts:
    - pgadminqa.tailorw.net
    secretName: tls
